refactor: remove old code, reformat code, remove immediate mode rendering from GPU, audio and GPU binding changes
audio:
long play_audio(Instance instance, int ptr, int len, int sampleRate, int format)

gpu:
int get_camera_transform -> 0 = FAIL, 1 = OK
int set_camera_transform -> 0 = FAIL, 1 = OK
int submit_gpu_commands  -> 0 = FAIL, 1 = OK